[gd_scene load_steps=3 format=3 uid="uid://qkdpwvudevk1"]

[ext_resource type="Theme" uid="uid://btofbsk47r5b3" path="res://ui/Themes/Old_PC_Theme.tres" id="1_p0vhc"]
[ext_resource type="Script" uid="uid://bh845cgpnesvc" path="res://ui/dialogue/dialogue_box.gd" id="1_xf2wg"]

[node name="DialogueBox" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p0vhc")
script = ExtResource("1_xf2wg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="speaker_image" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="speaker_name" type="Label" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="speech" type="RichTextLabel" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="speech_velocity_timer" type="Timer" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer/speech"]
unique_name_in_owner = true
wait_time = 0.1
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "aperte"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "p/ continuar"
